Pass specs for customers

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,3 +1,5 @@
+<p>Please add your products and click on Create:</p>
+
 <%= form_for(:customer, url: customers_path) do |f| %>
   <%= f.submit "Start app" %>
 <% end %>
