--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,3 +1,3 @@
 <p>Please add your products and click on Create:</p>
 
-<%= partials 'invoices/partials/form' %>
+<%= render "invoices/partials/invoice" %>
