--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -3,23 +3,4 @@
   <li>Create An Invoice</li>
 </ul>
 
-<%= form_for(@invoice) do |f| %>
-  <%= f.hidden_field :customer_id, value: @customer.id %>
-  <div class="form-container">
-    <div class="form-section">
-      <%= f.label :sub_total, 'Sub Total' %>
-      <%= f.number_field :sub_total %>
-    </div>
-    <div class="form-section">
-      <%= f.label :tax, 'IVA' %>
-      <%= f.number_field :tax %>
-    </div>
-    <div class="form-section">
-      <%= f.label :total, 'Grand Total' %>
-      <%= f.number_field :total %>
-    </div>
-    <div>
-      <%= f.submit "Create An Invoice" %>
-    </div>
-  </div>
-<% end %>
+<%= render "customers/partials/form" %>
