--- a/app/assets/stylesheets/form-styles.css
+++ b/app/assets/stylesheets/form-styles.css
@@ -14,7 +14,7 @@ body {
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px rgb(0 0 0 / 10%);
 }
 
 .items-section {
@@ -26,12 +26,11 @@ body {
 .items-container {
   display: flex;
   flex-direction: column;
-  justify-items: center;
-  align-items: center;
+  place-items: center center;
   padding: 10px;
   background-color: aliceblue;
   border-radius: 8px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px rgb(0 0 0 / 10%);
 }
 
 .item-content {
@@ -41,7 +40,7 @@ body {
 }
 
 .item-title {
-  margin: 0 0 5px 0;
+  margin: 0 0 5px;
   width: 100%;
   text-align: left;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -56,7 +55,7 @@ body {
   padding: 8px;
   border: none;
   border-radius: 8px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px rgb(0 0 0 / 10%);
   margin: 3px 0;
 }
 
@@ -68,7 +67,7 @@ body {
   cursor: pointer;
   background-color: #000;
   margin: 10px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px rgb(0 0 0 / 10%);
   color: #f9f9f9;
 }
 
@@ -81,10 +80,10 @@ body {
 .ammount-section {
   padding: 10px;
   background-color: aliceblue;
-  margin: 20px 0 10px 0;
+  margin: 20px 0 10px;
   width: 280px;
   text-align: right;
   align-items: end;
   border-radius: 8px;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 3px rgb(0 0 0 / 10%);
 }
