Add new styles to the invoice form, install tailwindcss, fix some conflicts with stylelint and fix issues with rubocop

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,6 +1,8 @@
-<p>Please complete all of the steps on this page:</p>
-<ul>
-  <li>Create An Invoice</li>
-</ul>
+<div class="flex flex-col">
+  <p>Please complete all of the steps on this page:</p>
+  <ul>
+    <li>Create An Invoice</li>
+  </ul>
 
-<%= render "customers/partials/form" %>
+  <%= render "customers/partials/form" %>
+</div>
