--- a/app/views/customers/partials/_form.html.erb
+++ b/app/views/customers/partials/_form.html.erb
@@ -1,50 +1,81 @@
-<%= form_for(@invoice) do |f| %>
-    <div class="form-container">
-        <%= f.hidden_field :customer_id, value: @customer.id %>
-        <button type="button" class="button-add">
-            Add item
-        </button>
-        <div class="items-section">
-            <div class="items-container">
-                <h2 class="item-title">Item #1</h2>
-                <div class="item-content">
-                    <div class="item">
-                        <span>Quantity</span>
-                        <input>
-                    </div>
-                    <div class="item">
-                        <span>Product/Service</span>
-                        <input>
-                    </div>
-                    <div class="item">
-                        <span>Unit Price</span>
-                        <input>
-                    </div>
-                    <div class="item">
-                        <span>Amount</span>
-                        <input>
+
+<%= form_with model: @invoice, data: { controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
+    <%= f.hidden_field :customer_id, value: @customer.id %>
+    <template data-nested-form-target="template">
+        <%= f.fields_for :invoice_items, InvoiceItem.new, child_index: 'NEW_RECORD' do |ii_fields| %>
+            <%= render "invoice_items/partials/invoice_item_form", f: ii_fields %>
+        <% end %>
+    </template>
+    <div class="sm:flex sm:items-center sm:justify-end">
+        <div class="flex items-center my-5 gap-x-3 mr-5">
+            <button type="button" data-action="nested-form#add" class="flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:bg-blue-600 dark:hover:bg-blue-500 dark:bg-blue-600">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+
+                <span>Add item</span>
+            </button>
+        </div>
+    </div>
+    <section class="container px-4 mx-auto">
+        <div class="flex flex-col">
+            <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                    <div class="overflow-hidden border border-gray-200 dark:border-gray-700 md:rounded-lg">
+                        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700 lg:min-w-[1024px]">
+                            <thead class="min-w-full bg-gray-50 dark:bg-gray-800">
+                                <tr>
+                                    <th scope="col" class="py-3.5 px-4 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                                        <div class="flex items-center gap-x-3">
+                                            <span class="flex items-center gap-x-2">Quantity</span>
+                                        </div>
+                                    </th>
+
+                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                                        Service
+                                    </th>
+
+                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                                        Unit Price
+                                    </th>
+
+                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                                        Amount
+                                    </th>
+
+                                    <th scope="col" class="relative py-3.5 px-4">
+                                        <span class="sr-only">Actions</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody data-nested-form-target="target" class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-900">
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="ammount-container">
-            <div class="ammount-section">
-                <div class="form-section">
-                    <%= f.label :sub_total, 'Sub Total' %>
-                    <%= f.number_field :sub_total %>
-                </div>
-                <div class="form-section">
-                    <%= f.label :tax, 'IVA' %>
-                    <%= f.number_field :tax %>
-                </div>
-                <div class="form-section">
-                    <%= f.label :total, 'Grand Total' %>
-                    <%= f.number_field :total %>
-                </div>
-                <div>
-                    <%= f.submit "Create An Invoice", class: 'submit-button' %>
-                </div>
+    </section>
+    <div class="ammount-container">
+        <div class="ammount-section">
+            <div class="form-section">
+                <%= f.label :sub_total, 'Sub Total' %>
+                <%= f.number_field :sub_total %>
             </div>
+            <div class="form-section">
+                <%= f.label :tax, 'IVA' %>
+                <%= f.number_field :tax %>
+            </div>
+            <div class="form-section">
+                <%= f.label :total, 'Grand Total' %>
+                <%= f.number_field :total %>
+            </div>
+        </div>
+    </div>
+    <div class="sm:flex sm:items-center sm:justify-end">
+        <div class="flex items-center my-5 gap-x-3 mr-5">
+            <%= link_to 'Cancel', root_path, class: "flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:border-red-600 dark:hover:border-1 dark:hover:border-red-500 dark:border-red-600" %>
+            <%= f.submit "Create An Invoice", class: "flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:bg-blue-600 dark:hover:bg-blue-500 dark:bg-blue-600"%>
         </div>
     </div>
 <% end %>
