--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,3 +1,5 @@
-<p>Please add your products and click on Create:</p>
+<div class="flex flex-col">
+    <p>Please add your products and click on Create:</p>
 
-<%= render "invoices/partials/invoice" %>
+    <%= render "invoices/partials/invoice" %>
+</div>
