Modified files and controller for better functionallity.
Add js functions that prints data in real time

--- a/app/views/invoice_items/partials/_invoice_item_form.html.erb
+++ b/app/views/invoice_items/partials/_invoice_item_form.html.erb
@@ -1,9 +1,9 @@
-<tr class="nested-form-wrapper revenue" data-new-record="<%= f.object.new_record? %>">
+<tr class="nested-form-wrapper" data-new-record="<%= f.object.new_record? %>">
     <%= f.fields_for :invoice_items do |product_items_fields| %>
         <td class="px-4 py-4 text-sm font-medium text-gray-700 dark:text-gray-200 whitespace-nowrap">
             <div class="inline-flex items-center gap-x-3">
                 <div class="relative mt-2 rounded-md shadow-sm">
-                    <%= f.number_field :quantity, class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                    <%= f.number_field :quantity,  data: { target: 'nested-form.quantity-field' }, class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                 </div>
             </div>
         </td>
@@ -11,20 +11,15 @@
         <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-nowrap">
             <div class="inline-flex items-center gap-x-3">
                 <div class="relative mt-2 rounded-md shadow-sm">
-                    <%= f.select :name,
-                        options_for_select([
-                            "Software Development", "Web App", "Mobile Application", "Database Migration"
-                        ]),
-                        { placeholder: "Select an option" },
-                        { class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" }
-                    %>
+                    <%= f.collection_select(:product_id, Product.all, :id, :name, { selected: @product.id }, { class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" } ) %>
                 </div>
             </div>
         </td>
         <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-nowrap">
             <div class="inline-flex items-center gap-x-3">
                 <div class="relative mt-2 rounded-md shadow-sm">
-                    <%= f.number_field :unit_price, class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                    <%= f.text_field(:unit_price, class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6", value: @item.unit_price) %>
+                    <%= @product.unit_price %>
                 </div>
             </div>
         </td>
@@ -32,8 +27,8 @@
         <td class="px-4 py-4 text-sm text-gray-500 dark:text-gray-300 whitespace-nowrap">
             <div class="inline-flex items-center gap-x-3">
                 <div class="relative mt-2 rounded-md shadow-sm">
-                    <%# f.number_field :amount, class: "w-full rounded-md border-0 py-1.5 pl-7 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
-                    <%= number_to_currency(:amount)%>
+                    <% amount = @product.unit_price.to_f * product_items_fields.object&.quantity.to_i %>
+                    <input type="text" id="amount" value="<%= amount %>">
                 </div>
             </div>
         </td>
