--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,8 @@
-<p>Please add your products and click on Create:</p>
+<div class="flex flex-col gap-5">
+  <p class="text-2xl">Please add your products and click on Create:</p>
 
-<%= form_for(:customer, url: customers_path) do |f| %>
-  <%= f.submit "Start app" %>
-<% end %>
+  <%= form_for(:customer, url: customers_path) do |f| %>
+    <%= f.submit "Start app", class: 'bg-blue-500 px-2.5 py-1.5 rounded-md shadow-md text-white' %>
+  <% end %>
+
+</div>
