--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,72 +1,109 @@
-<div class="flex flex-col">
-  <p>Please complete all of the steps on this page:</p>
+<div class="h-full flex flex-col justify-center items-center w-full mx-auto max-w-[1124px]">
+  <p class="dark:text-slate-200">Please complete all of the steps on this page:</p>
   <ul>
-    <li>Create An Invoice</li>
+    <li class="dark:text-slate-200">Create An Invoice</li>
   </ul>
 
   <%# render 'customers/partials/form' %>
 
+  <%= form_for @invoice, url: invoices_path, data: { controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' }, method: :post do |f| %>
+    <%= f.hidden_field :customer_id, value: @customer.id %>
 
-<%= form_for @invoice, url: invoices_path, method: :post do |f| %>
-  <%= f.hidden_field :customer_id, value: @customer.id %>
+    <template data-nested-form-target="template">
+      <%= f.fields_for :invoice_items, InvoiceItem.new, child_index: 'NEW_RECORD' do |item_form| %>
+        <div class="p-5 rounded-md shadow-md bg-slate-200 w-full flex flex-row justify-center items-center gap-3 my-5 nested-form-wrapper" data-controller="invoice-item"  data-new-record="<%= f.object.new_record? %>">
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Quantity</span>
+            <%= item_form.number_field :quantity, id: 'quantity', min: 0, class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
 
-  <h2>Invoice Items</h2>
-  <div class="w-full bg-slate-200 p-5 rounded-md shadow-md">
-    <%= f.fields_for :invoice_items do |item_form| %>
-      <div class="w-full flex flex-row justify-center items-center gap-3" data-controller="invoice-item">
-        <div class="flex flex-col">
-          <span class="font-bold pl-3">Quantity</span>
-          <%= item_form.number_field :quantity, id: 'quantity', class: 'rounded-md border-slate-100 shadow-md' %>
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Service</span>
+            <%= item_form.collection_select :product_id, Product.all, :id, :name, { prompt: 'Select a product' }, class: 'product-select rounded-md border-slate-100 shadow-md' %>
+          </div>
+
+          <div class="">
+            <%= item_form.fields_for :product_attributes do |product_form| %>
+              <div class="flex flex-col">
+                <span class='font-bold pl-3'>Unit Price</span>
+                <%= product_form.text_field :unit_price, class: "unit-price rounded-md border-slate-100 shadow-md" %>
+              </div>
+            <% end %>
+          </div>
+          <div class="flex flex-col">
+            <span class='font-bold pl-3'>Amount</span>
+            <%= item_form.text_field :amount, id: 'amount-result', class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
+          <div class="flex flex-col justify-center items-center h-full my-auto pt-4">
+              <button type="button" data-action="nested-form#remove" class="text-red-500 font-bold text-4xl">-</button>
+              <%= f.hidden_field :_destroy %>
+          </div>
+        </div>
+      <% end %>
+    </template>
+
+    <div class="w-full flex flex-row justify-between items-center my-5">
+      <h2 class="text-2xl font-bold dark:text-slate-200">Invoice Items</h2>
+      <button type="button" data-action="nested-form#add" class="bg-blue-500 px-2.5 py-1.5 text-white rounded-md shadow-md">Add todo</button>
+    </div>
+    <div class="w-full">
+      <%= f.fields_for :invoice_items do |item_form| %>
+        <div class="mb-5 p-5 rounded-md shadow-md bg-slate-200 w-full flex flex-row justify-center items-center gap-3" data-controller="invoice-item">
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Quantity</span>
+            <%= item_form.number_field :quantity, id: 'quantity', min: 0, class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
+
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Service</span>
+            <%= item_form.collection_select :product_id, Product.all, :id, :name, { prompt: 'Select a product' }, class: 'product-select rounded-md border-slate-100 shadow-md' %>
+          </div>
+
+          <div class="">
+            <%= item_form.fields_for :product_attributes do |product_form| %>
+              <div class="flex flex-col">
+                <span class='font-bold pl-3'>Unit Price</span>
+                <%= product_form.text_field :unit_price, class: "unit-price rounded-md border-slate-100 shadow-md" %>
+              </div>
+            <% end %>
+          </div>
+          <div class="flex flex-col">
+            <span class='font-bold pl-3'>Amount</span>
+            <%= item_form.text_field :amount, id: 'amount-result', class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div data-nested-form-target="target"></div>
+
+
+    <div class="flex flex-col justify-end">
+      <div class="bg-slate-200 rounded-md shadow-md my-5 p-5">
+        <div class="flex flex-row gap-5">
+          <span class="text-right">Subtotal</span>
+          <p id="subtotal"></p>
+          <%# @invoice.invoice_items.sum(&:amount) %>
+        </div>
+
+        <div class="flex flex-row gap-5">
+          <span class="text-right">Tax 16%</span>
+          <%# @invoice.invoice_items.sum(&:amount) * 0.16 %>
+          <p id='taxSixteen'></p>
+        </div>
+
+        <div class="flex flex-row gap-5">
+          <span class="text-right">Total</span>
+          <%# @invoice.invoice_items.sum(&:amount) + (@invoice.invoice_items.sum(&:amount) * 0.16) %>
+          <p id="grandTotal"></p>
         </div>
 
         <div class="flex flex-col">
-          <span class="font-bold pl-3">Service</span>
-          <%= item_form.collection_select :product_id, Product.all, :id, :name, { prompt: 'Select a product' }, class: 'product-select rounded-md border-slate-100 shadow-md' %>
-        </div>
-
-        <div class="">
-          <%= item_form.fields_for :product_attributes do |product_form| %>
-            <div class="flex flex-col">
-              <span class='font-bold pl-3'>Unit Price</span>
-              <%= product_form.text_field :unit_price, class: "unit-price rounded-md border-slate-100 shadow-md" %>
-            </div>
-          <% end %>
-        </div>
-        <div class="flex flex-col">
-          <span class='font-bold pl-3'>Amount</span>
-          <%= item_form.text_field :amount, id: 'amount-result', class: 'rounded-md border-slate-100 shadow-md' %>
+          <%= f.submit "Create An Invoice", class: "btn bg-green-500 py-1.5 px-2.5 rounded-md shadow-md mt-5 text-white max-w-[280px] mx-auto w-full hover:bg-green-600 active:bg-green-600 active:shadow-inner" %>
         </div>
       </div>
-    <% end %>
-  </div>
-
-<div class="flex flex-col justify-end">
-  <div class="bg-slate-200 rounded-md shadow-md my-5 p-5">
-    <div class="flex flex-row gap-5">
-      <span class="text-right">Subtotal</span>
-      <p id="subtotal"></p>
-      <%# @invoice.invoice_items.sum(&:amount) %>
     </div>
-
-    <div class="flex flex-row gap-5">
-      <span class="text-right">Tax 16%</span>
-      <%# @invoice.invoice_items.sum(&:amount) * 0.16 %>
-      <p id='taxSixteen'></p>
-    </div>
-
-    <div class="flex flex-row gap-5">
-      <span class="text-right">Total</span>
-      <%# @invoice.invoice_items.sum(&:amount) + (@invoice.invoice_items.sum(&:amount) * 0.16) %>
-      <p id="grandTotal"></p>
-    </div>
-
-    <div class="flex flex-col">
-      <%= f.submit "Create An Invoice", class: "btn bg-green-500 py-1.5 px-2.5 rounded-md shadow-md mt-5 text-white max-w-[280px] mx-auto w-full hover:bg-green-600 active:bg-green-600 active:shadow-inner" %>
-    </div>
-  </div>
+  <% end %>
 </div>
-
-<% end %>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
