--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -14,7 +14,7 @@
         <div id="nestedContainer" class="p-5 rounded-md shadow-md bg-slate-200 w-full flex flex-row justify-center items-center gap-3 my-5 nested-form-wrapper" data-controller="invoice-item"  data-new-record="<%= f.object.new_record? %>">
           <div class="flex flex-col">
             <span class="font-bold pl-3">Quantity</span>
-            <%= item_form.number_field :quantity, id: 'quantity', min: 0, class: 'rounded-md border-slate-100 shadow-md' %>
+            <%= item_form.number_field :quantity, id: 'quantityNested', min: 0, class: 'rounded-md border-slate-100 shadow-md' %>
           </div>
 
           <div class="flex flex-col">
@@ -28,7 +28,7 @@
                             controller: 'invoice-item',
                             target: 'invoice-item.productSelect'
                           },
-                          class: 'product-select rounded-md border-slate-100 shadow-md'
+                          class: 'productSelectNested rounded-md border-slate-100 shadow-md'
             %>
           </div>
 
@@ -36,13 +36,13 @@
             <%= item_form.fields_for :product_attributes do |product_form| %>
               <div class="flex flex-col">
                 <span class='font-bold pl-3'>Unit Price</span>
-                <%= product_form.text_field :unit_price, class: "unit-price rounded-md border-slate-100 shadow-md" %>
+                <%= product_form.text_field :unit_price, class: "unitPriceNested rounded-md border-slate-100 shadow-md" %>
               </div>
             <% end %>
           </div>
           <div class="flex flex-col">
             <span class='font-bold pl-3'>Amount</span>
-            <%= item_form.text_field :amount, id: 'amount-result', class: 'rounded-md border-slate-100 shadow-md' %>
+            <%= item_form.text_field :amount, id: 'amountResultNested', class: 'rounded-md border-slate-100 shadow-md' %>
           </div>
           <div class="flex flex-col justify-center items-center h-full my-auto pt-4">
               <button
@@ -69,7 +69,7 @@
         >Add item</button>
       </div>
     </div>
-    <div class="w-full">
+    <div class="w-full min-h-[320px]">
       <%= f.fields_for :invoice_items do |item_form| %>
         <div class="mb-5 p-5 rounded-md shadow-md bg-slate-200 w-full flex flex-row justify-center items-center gap-3" data-controller="invoice-item">
           <div class="flex flex-col">
@@ -106,8 +106,8 @@
           </div>
         </div>
       <% end %>
-    </div>
     <div data-nested-form-target="target"></div>
+    </div>
 
 
     <div class="flex flex-col justify-end">
@@ -141,8 +141,12 @@
 <script>
   let unitPriceValue;
   let invoiceItemsCount = <%= @invoice.invoice_items.size %>;
+  const productSelectNested = document.querySelector('.productSelectNested');
+  const unitPriceNested = document.querySelector('.unitPriceNested');
+  const quantityNested = document.getElementById('quantityNested');
+  const amountResultNested = document.getElementById('amountResultNested');
   const productSelect = document.querySelector('.product-select');
-  const unitPrice = document.querySelector('.unit-price');
+  const unitPriceClass = document.querySelector('.unit-price');
   const quantity = document.getElementById('quantity');
   const amountResult = document.getElementById('amount-result');
   const subtotalResult = document.getElementById('subtotal');
@@ -169,9 +173,9 @@
         maxItemsMessage.textContent = 'Invoices are limited to two items';
         maxItemsMessage.classList.remove('hidden');
         maxItemsMessage.classList.add(
-          "bg-red-500",
+          "bg-yellow-500",
           "w-full",
-          "text-white",
+          "text-black",
           "text-center",
           "rounded-md",
           "py-1.5"
@@ -192,8 +196,8 @@
 
   const updateUnitPrice = async () => {
     const selectedProductId = productSelect.value || 0;
+    unitPriceClass.textContent = selectedProductId;
 
-    unitPrice.textContent = selectedProductId;
     await fetch(`/products/${selectedProductId}`, {
       method: 'GET',
       headers: {
@@ -202,7 +206,7 @@
     })
       .then((response) => response.json())
       .then(data => {
-        unitPrice.value = data.unit_price.toFixed(2);
+        unitPriceClass.value = data.unit_price.toFixed(2);
         unitPriceValue = data.unit_price;
         multiplyAmount(unitPriceValue);
       })
@@ -224,9 +228,9 @@
     getTax(formattedAmount)
   };
 
-  const multiplyAmount = (unitPrice) => {
+  const multiplyAmount = (unitPriceClass) => {
     const selectedQuantity = quantity.value;
-    const amount = unitPrice * selectedQuantity;
+    const amount = unitPriceClass * selectedQuantity;
     amountResult.value = amount.toFixed(2);
     subtotalsAmount(amount)
   };
