--- a/app/views/invoices/partials/_invoice.html.erb
+++ b/app/views/invoices/partials/_invoice.html.erb
@@ -13,18 +13,19 @@
     <div class="bg-red-500 p-5 rounded-md">
         <% @invoice.invoice_items.each do |item| %>
             <div class="flex flex-col gap-3">
-                Name: <%= item.name %>,
                 Quantity: <%= item.quantity %>,
-                Unit Price: <%= number_to_currency(item.unit_price) %>,
+                Name: <%= item.product.name %>,
+                Unit Price: <%= number_to_currency(item.product.unit_price) %>,
                 Amount: <%= number_to_currency(item.amount) %>
             </div>
         <% end %>
+
     </div>
 </div>
 
 <div>
     <h5>Sub Total</h5>
-    <%= number_to_currency(@invoice.sub_total) %>
+    <%= number_to_currency(@invoice.subtotal) %>
 </div>
 
 <div>
