--- a/app/views/customers/partials/_form.html.erb
+++ b/app/views/customers/partials/_form.html.erb
@@ -1,81 +1,48 @@
-
-<%= form_with model: @invoice, data: { controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
-    <%= f.hidden_field :customer_id, value: @customer.id %>
     <template data-nested-form-target="template">
-        <%= f.fields_for :invoice_items, InvoiceItem.new, child_index: 'NEW_RECORD' do |ii_fields| %>
-            <%= render "invoice_items/partials/invoice_item_form", f: ii_fields %>
-        <% end %>
+      <%= f.fields_for :invoice_items, InvoiceItem.new, child_index: 'NEW_RECORD' do |item_form| %>
+        <div id="nestedContainer" class="p-5 rounded-md shadow-md bg-slate-200 w-full flex flex-row justify-center items-center gap-3 my-5 nested-form-wrapper" data-controller="invoice-item"  data-new-record="<%= f.object.new_record? %>">
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Quantity</span>
+            <%= item_form.number_field :quantity, id: 'quantityNested', min: 0, class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
+
+          <div class="flex flex-col">
+            <span class="font-bold pl-3">Service</span>
+            <%= item_form.collection_select :product_id,
+                          Product.all,
+                          :id,
+                          :name,
+                          { prompt: 'Select a product' },
+                          data: {
+                            controller: 'invoice-item',
+                            target: 'invoice-item.productSelect'
+                          },
+                          class: 'productSelectNested rounded-md border-slate-100 shadow-md'
+            %>
+          </div>
+
+          <div class="">
+            <%= item_form.fields_for :product_attributes do |product_form| %>
+              <div class="flex flex-col">
+                <span class='font-bold pl-3'>Unit Price</span>
+                <%= product_form.text_field :unit_price, class: "unitPriceNested rounded-md border-slate-100 shadow-md" %>
+              </div>
+            <% end %>
+          </div>
+          <div class="flex flex-col">
+            <span class='font-bold pl-3'>Amount</span>
+            <%= item_form.text_field :amount, id: 'amountResultNested', class: 'rounded-md border-slate-100 shadow-md' %>
+          </div>
+          <div class="flex flex-col justify-center items-center h-full my-auto pt-4">
+              <button
+                  type="button"
+                  id="deleteButtonItems"
+                  data-action="nested-form#remove"
+                  class="text-red-500 font-bold text-4xl"
+                  onclick="removeItem();"
+              >-</button>
+              <%= f.hidden_field :_destroy %>
+          </div>
+        </div>
+      <% end %>
     </template>
-    <div class="sm:flex sm:items-center sm:justify-end">
-        <div class="flex items-center my-5 gap-x-3 mr-5">
-            <button type="button" data-action="nested-form#add" class="flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:bg-blue-600 dark:hover:bg-blue-500 dark:bg-blue-600">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg>
-
-                <span>Add item</span>
-            </button>
-        </div>
-    </div>
-    <section class="container px-4 mx-auto">
-        <div class="flex flex-col">
-            <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-                    <div class="overflow-hidden border border-gray-200 dark:border-gray-700 md:rounded-lg">
-                        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700 lg:min-w-[1024px]">
-                            <thead class="min-w-full bg-gray-50 dark:bg-gray-800">
-                                <tr>
-                                    <th scope="col" class="py-3.5 px-4 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                                        <div class="flex items-center gap-x-3">
-                                            <span class="flex items-center gap-x-2">Quantity</span>
-                                        </div>
-                                    </th>
-
-                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                                        Service
-                                    </th>
-
-                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                                        Unit Price
-                                    </th>
-
-                                    <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                                        Amount
-                                    </th>
-
-                                    <th scope="col" class="relative py-3.5 px-4">
-                                        <span class="sr-only">Actions</span>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody data-nested-form-target="target" class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-900">
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="ammount-container">
-        <div class="ammount-section">
-            <div class="form-section">
-                <%= f.label :sub_total, 'Sub Total' %>
-                <%= f.number_field :sub_total %>
-            </div>
-            <div class="form-section">
-                <%= f.label :tax, 'IVA' %>
-                <%= f.number_field :tax %>
-            </div>
-            <div class="form-section">
-                <%= f.label :total, 'Grand Total' %>
-                <%= f.number_field :total %>
-            </div>
-        </div>
-    </div>
-    <div class="sm:flex sm:items-center sm:justify-end">
-        <div class="flex items-center my-5 gap-x-3 mr-5">
-            <%= link_to 'Cancel', root_path, class: "flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:border-red-600 dark:hover:border-1 dark:hover:border-red-500 dark:border-red-600" %>
-            <%= f.submit "Create An Invoice", class: "flex items-center justify-center w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-blue-500 rounded-lg shrink-0 sm:w-auto gap-x-2 hover:bg-blue-600 dark:hover:bg-blue-500 dark:bg-blue-600"%>
-        </div>
-    </div>
-<% end %>
